<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_light_blue"
    tools:context=".ui.settings.SettingsFragment">
    <Button
        android:id="@+id/btn_account_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/account_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/btn_profile_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/profile_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/btn_workspace_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/workspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/btn_notification_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/notification_settings"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/btn_theme_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/global_theme"
        style="@style/Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/btn_content_setting"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/content_setting"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/btn_logout"
        android:onClick="cerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity=""
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/sesclose"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MyPix 1.0.0" />
    </LinearLayout>


</LinearLayout>