<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.UserLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="200dp"
                android:src="@drawable/mpx_logo" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_edittext_background"
                android:ems="10"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#45B6E6" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_edittext_background"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#45B6E6" />

            <Button
                android:id="@+id/loginbutton"
                android:onClick="authUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_buttonok_background"
                android:text="INGRESAR" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/login_horizontalline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"

                    android:src="@drawable/google" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tuiter" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginStart="40dp"
                    android:text="@string/no_tiene_una_cuenta"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/registerbutton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crear_cuenta"
                    android:layout_marginEnd="40dp"
                    android:textColor="@color/main_dark_blue" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>