<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_light_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.ArtistViewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:foreground="@drawable/illustview_foreground">

        <ImageView
            android:id="@+id/artistview_blurbackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/braix_prof" />

        <ImageButton
            android:id="@+id/imageButton5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:contentDescription="Retroceder"
            android:elevation="4dp"
            android:onClick="exitAristView"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/home_bars"
            android:gravity="center"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/artistview_profileimage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"

                android:src="@drawable/braix_prof" />

            <TextView
                android:id="@+id/artistview_profilename"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Artist Name"
                android:textSize="25sp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/artistview_followercount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="00"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Seguidores" />

        <ToggleButton
            android:id="@+id/artistview_followtoggle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_selector_followuser"
            android:onClick="handleFollowClick"
            android:text=""
            android:textOff="@string/seguir"
            android:textOn="@string/siguiendo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/home_bars"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/artistview_similaricon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    app:srcCompat="@drawable/palette" />

                <TextView
                    android:id="@+id/artistview_similartext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Artistas similares"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artistview_similarartistrecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foregroundGravity="center_horizontal" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/home_bars"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/artistview_illusticon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    app:srcCompat="@drawable/gallery" />

                <TextView
                    android:id="@+id/artistview_illusttext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/artist_illust_str"
                    android:textSize="20sp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/artistview_illustrecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>